US006 + US027: comments

--- a/app/src/main/res/layout/activity_new_event.xml
+++ b/app/src/main/res/layout/activity_new_event.xml
@@ -2,7 +2,6 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-        android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?android:windowBackground">
@@ -44,8 +43,7 @@
             android:layout_height="wrap_content"
 
             android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="91dp"
+            android:layout_below="@+id/newEvent_textEdit_shortTitle"
             android:ems="10"
             android:inputType="textPersonName" />
 
@@ -58,8 +56,8 @@
 
             android:layout_height="wrap_content"
 
-            android:layout_alignBaseline="@+id/newEvent_editText_description"
             android:layout_alignParentStart="true"
+            android:layout_alignTop="@+id/newEvent_editText_description"
             android:text="@string/event_Description" />
 
 
@@ -86,7 +84,7 @@
 
             android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="204dp"
+            android:layout_marginTop="178dp"
             android:ems="10" />
 
 
@@ -112,7 +110,8 @@
             android:layout_height="wrap_content"
 
             android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="232dp"
             android:ems="10"
             android:focusable="true" />
 
@@ -139,7 +138,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginBottom="196dp"
+            android:layout_marginBottom="235dp"
             android:ems="10"
             android:focusable="true" />
 
@@ -152,9 +151,9 @@
 
             android:layout_height="wrap_content"
 
+            android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/newEvent_textEdit_endTime"
-            android:layout_marginTop="-176dp"
+            android:layout_marginBottom="133dp"
             android:checked="false"
             android:text="@string/event_serialEvent" />
 
@@ -254,9 +253,9 @@
             android:layout_height="wrap_content"
 
             android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="146dp"
+            android:layout_below="@+id/newEvent_editText_description"
             android:ems="10"
+            android:imeOptions="actionDone"
             android:inputType="text" />
 
         <EditText
@@ -276,6 +275,24 @@
             android:layout_alignBaseline="@+id/newEvent_textEdit_shortTitle"
             android:layout_alignParentStart="true"
             android:text="@string/event_shortTitle" />
+
+        <TextView
+            android:id="@+id/newEvent_textVire_userName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="191dp"
+            android:text="@string/username_text" />
+
+        <EditText
+            android:id="@+id/unewEvent_textEdit_userName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/newEvent_textVire_userName"
+            android:layout_alignParentEnd="true"
+            android:ems="10"
+            android:inputType="textPersonName" />
 
 
     </RelativeLayout>
