--- a/app/src/main/res/layout/activity_tab.xml
+++ b/app/src/main/res/layout/activity_tab.xml
@@ -29,8 +29,7 @@
                 android:id="@+id/calendarTab"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/calendarTabText"
-                android:visibility="visible" />
+                android:text="@string/calendarTabText" />
 
             <android.support.design.widget.TabItem
                 android:id="@+id/settingTab"
@@ -45,17 +44,7 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" >
-
-    </android.support.v4.view.ViewPager>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/newEventFloatButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <FrameLayout
         android:layout_width="match_parent"
