--- a/app/src/main/res/layout/activity_new_event.xml
+++ b/app/src/main/res/layout/activity_new_event.xml
@@ -18,8 +18,8 @@
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:scrollbarStyle="insideOverlay"
-        android:scrollbars="vertical">
+android:focusable="false"
+        android:focusableInTouchMode="true">
 
         <TextView
             android:id="@+id/newEventTab"
