--- a/app/src/main/res/layout/activity_event_overview.xml
+++ b/app/src/main/res/layout/activity_event_overview.xml
@@ -60,6 +60,25 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_menu_camera" />
 
+
+
+    <!--TODO: delete Button as soon as detailed view of event exists-->
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/eventOverview_floatingActionButtonTemporaryGetParticipants"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="121dp"
+        android:layout_marginTop="420dp"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_myplaces" />
+    <!--TODO: delete Button as soon as detailed view of event exists-->
+
+
+
+
     <RelativeLayout
         android:id="@+id/eventOverview_relativeLayout_helper"
         android:layout_width="match_parent"
