--- a/app/src/main/res/layout/activity_qrsharing.xml
+++ b/app/src/main/res/layout/activity_qrsharing.xml
@@ -1,68 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    tools:context=".view.QRSharingActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/generator_realtivLayout_show_qrSharingFragment">
+        android:id="@+id/qrSharing_relativeLayout_calendarActivity">
 
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/generator_texView_frame"
+        android:id="@+id/qrSharing_relativeLayout_textViewFrame"
         android:layout_width="match_parent"
-        android:layout_height="347dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true">
+        android:layout_height="220dp">
 
         <TextView
-            android:id="@+id/generator_textView_Headline"
-            android:layout_width="244dp"
-            android:layout_height="46dp"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="23dp"
-            android:text="@string/headline" />
-
-        <TextView
-            android:id="@+id/generator_textView_description"
-            android:layout_width="309dp"
-            android:layout_height="111dp"
+            android:id="@+id/qrSharing_textView_headline"
+            android:layout_width="260dp"
+            android:layout_height="55dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="78dp"
-            android:text="EventText" />
+            android:layout_marginTop="17dp"
+            android:text="qrSharing_Headline" />
+
+        <TextView
+            android:id="@+id/qrSharing_textView_description"
+            android:layout_width="281dp"
+            android:layout_height="103dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="13dp"
+            android:layout_marginStart="55dp"
+            android:text="qrSharing_description" />
+
 
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/generator_button_frame"
+        android:id="@+id/qrSharing_relativeLayout_buttonFrame"
         android:layout_width="match_parent"
-        android:layout_height="217dp"
+        android:layout_height="147dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true">
 
-
         <Button
-            android:id="@+id/generator_button_start_qrShareingFragment"
+            android:id="@+id/qrSharing_button_shareWith"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="101dp"
-            android:layout_marginTop="22dp"
-            android:text="@string/qr_code_anzeigen" />
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="26dp"
+            android:text="@string/teilen_via" />
 
         <Button
-            android:id="@+id/generator_button_show_eventFeedbackFragment"
+            android:id="@+id/qrSharing_button_showInCalendar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="71dp"
-            android:text="@string/r_ckmeldungen_anzeigen" />
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="14dp"
+            android:layout_marginEnd="89dp"
+            android:text="In Kalender anzeigen" />
 
     </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/qrSharing_imageView_qrCode"
+        android:layout_width="218dp"
+        android:layout_height="200dp"
+        android:layout_above="@+id/qrSharing_relativeLayout_buttonFrame"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
