Layout corrections in CalendarView and EventOverview Adaptions for Floating Buttons in CalendarView and EventOverview

--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -2,22 +2,20 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/calendar_constrainLayout_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?android:windowBackground"
-    tools:context=".view.CalendarActivity"
-    android:id="@+id/calendar_constrainLayout_main">
+    tools:context=".view.CalendarActivity">
     tools:context=".view.CalendarActivity">
 
     <com.github.sundeepk.compactcalendarview.CompactCalendarView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/calendarCvCalendar"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="246dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="40dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
+        android:layout_marginTop="95dp"
+        android:paddingLeft="0dp"
+        android:paddingRight="0dp"
         app:compactCalendarBackgroundColor="@color/zentea_lightestgreen"
         app:compactCalendarCurrentDayBackgroundColor="@color/zentea_lightgreen"
         app:compactCalendarCurrentSelectedDayBackgroundColor="@color/zentea_darkgreen"
@@ -37,7 +35,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
         android:lines="@android:integer/config_longAnimTime"
-        android:text="TextView Monat"
+        android:text="TextView Day"
         android:textColor="@color/zentea_darkgreyblue"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -50,12 +48,13 @@
         android:id="@+id/calendarTvMonth"
         android:layout_width="match_parent"
         android:layout_height="40dp"
+        android:layout_marginTop="55dp"
         android:autoText="false"
         android:background="@color/zentea_darkgreen"
         android:backgroundTintMode="src_atop"
         android:clickable="true"
         android:paddingTop="8dp"
-        android:text="TextView Monat"
+        android:text="TextView Month"
         android:textAlignment="center"
         android:textColor="@color/ic_launcher_background"
         android:textSize="18sp"
@@ -86,28 +85,42 @@
         android:layout_height="50dp"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:layout_marginBottom="28dp"
+        android:layout_marginBottom="32dp"
         android:layout_marginEnd="312dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        app:backgroundTint="@color/zentea_darkgreen"
+        app:elevation="6dp"
+        app:fabSize="mini"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.997"
-        app:srcCompat="@drawable/ic_android_black2_24dp" />
+        app:layout_constraintVertical_bias="0.989"
+        app:srcCompat="@drawable/ic_add_circle_outline_black_24dp" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/calendar_floatingActionButtonNewEvent"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_gravity="bottom|end"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="392dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="22dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:tint="@color/zentea_darkgreyblue"
         android:visibility="invisible"
+        app:backgroundTint="@color/zentea_green1"
+        app:elevation="6dp"
+        app:fabSize="mini"
+        app:layout_constraintBottom_toBottomOf="@+id/calendar_floatingActionButtonMenu"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.897"
+        app:rippleColor="@color/zentea_white"
         app:srcCompat="@android:drawable/ic_menu_today" />
 
     <android.support.design.widget.FloatingActionButton
@@ -115,11 +128,22 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_gravity="bottom|end"
-        android:layout_marginEnd="64dp"
-        android:layout_marginTop="412dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="22dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="204dp"
+        android:tint="@color/zentea_darkgreyblue"
         android:visibility="invisible"
+        app:backgroundTint="@color/zentea_green1"
+        app:elevation="6dp"
+        app:fabSize="mini"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.673"
+        app:rippleColor="@color/zentea_white"
         app:srcCompat="@android:drawable/ic_menu_camera" />
 
     <RelativeLayout
