--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="zentea_lightestgreen">#f6ffe0</color>
     <color name="zentea_green1">#bdd684</color>
     <color name="zentea_lightgreen">#e2f0d6</color>
+    <color name="zentea_white">#ffffff</color>
 </resources>
