--- a/app/src/main/res/layout/activity_event_overview.xml
+++ b/app/src/main/res/layout/activity_event_overview.xml
@@ -28,36 +28,61 @@
         android:layout_marginEnd="312dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        app:backgroundTint="@color/zentea_darkgreen"
+        app:elevation="6dp"
+        app:fabSize="mini"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.997"
-        app:srcCompat="@drawable/ic_android_black2_24dp" />
+        app:srcCompat="@drawable/ic_add_circle_outline_black_24dp" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/eventOverview_floatingActionButtonNewEvent"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_gravity="bottom|end"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="392dp"
+        android:layout_gravity="top|right"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="22dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:tint="@color/zentea_darkgreyblue"
         android:visibility="invisible"
+        app:backgroundTint="@color/zentea_green1"
+        app:elevation="6dp"
+        app:fabSize="mini"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.884"
+        app:rippleColor="@color/zentea_white"
         app:srcCompat="@android:drawable/ic_menu_today" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/eventOverview_floatingActionButtonScan"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_gravity="bottom|end"
-        android:layout_marginEnd="64dp"
-        android:layout_marginTop="412dp"
+        android:layout_gravity="top|right"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="22dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:tint="@color/zentea_darkgreyblue"
         android:visibility="invisible"
+        app:backgroundTint="@color/zentea_green1"
+        app:elevation="6dp"
+        app:fabSize="mini"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.79"
+        app:rippleColor="@color/colorAccent"
         app:srcCompat="@android:drawable/ic_menu_camera" />
 
     <RelativeLayout
