--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -98,7 +98,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.989"
-        app:srcCompat="@drawable/ic_add_circle_outline_black_24dp" />
+        app:srcCompat="@drawable/ic_plusmenu" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/calendar_floatingActionButtonNewEvent"
