--- a/app/src/main/res/layout/fragment_calendar_newevent.xml
+++ b/app/src/main/res/layout/fragment_calendar_newevent.xml
@@ -3,8 +3,8 @@
     android:id="@+id/calendar_relativeLayout_newEvent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="?android:windowBackground">
+    android:background="?android:windowBackground"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
