--- a/app/src/main/res/layout/fragment_settings_feedback.xml
+++ b/app/src/main/res/layout/fragment_settings_feedback.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/settings_relativeLayout_feedback"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/settings_relativeLayout_feedback"
-    android:orientation="vertical"
-    android:background="?android:windowBackground">
+    android:background="?android:windowBackground"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
