--- a/app/src/main/res/layout/fragment_settings_settings.xml
+++ b/app/src/main/res/layout/fragment_settings_settings.xml
@@ -3,8 +3,8 @@
     android:id="@+id/settings_relativeLayout_settings"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="?android:windowBackground">
+    android:background="?android:windowBackground"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/settings_settings_textView_username"
@@ -72,8 +72,8 @@
         android:layout_alignTop="@+id/settings_settings_textView_reminder"
         android:layout_toEndOf="@+id/settings_settings_textView_username"
         android:entries="@array/push_times"
-        android:visibility="visible"
-        android:prompt="@string/calendar"/>
+        android:prompt="@string/calendar"
+        android:visibility="visible" />
 
     <TextView
         android:id="@+id/settings_settings_textView_reminder"
