--- a/app/src/main/res/drawable-v23/button_border.xml
+++ b/app/src/main/res/drawable-v23/button_border.xml
@@ -5,7 +5,7 @@
 
         <shape android:shape="rectangle">
             <solid android:color="#f5f9db"/>
-            <stroke android:width="2dp" android:color="#ffffff"/>
+            <stroke android:width="2dp" android:color="#eeeee0"/>
 
         </shape>
     </item>
