Us002 Settings_settings customized

--- a/app/src/main/res/values/ic_launcher_background.xml
+++ b/app/src/main/res/values/ic_launcher_background.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="ic_launcher_background">#F5F9DB</color>
+    <color name="ic_launcher_background">#f5f9db</color>
 </resources>
