--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -114,7 +114,7 @@
         app:backgroundTint="@color/zentea_green1"
         app:elevation="6dp"
         app:fabSize="mini"
-        app:layout_constraintBottom_toBottomOf="@+id/calendar_floatingActionButtonMenu"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
