US001 FAB rotate animation finalized

--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -81,11 +81,11 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/calendar_floatingActionButtonMenu"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="28dp"
         android:layout_marginEnd="312dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -102,48 +102,44 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/calendar_floatingActionButtonNewEvent"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_gravity="top|right"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="22dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:visibility="invisible"
+        app:backgroundTint="@color/zentea_darkgreen"
+        app:elevation="6dp"
+        app:fabSize="mini"
+        app:layout_constraintBottom_toTopOf="@+id/calendar_floatingActionButtonMenu"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.988"
+        app:srcCompat="@android:drawable/ic_menu_today" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/calendar_floatingActionButtonScan"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
         android:layout_gravity="bottom|end"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="22dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:tint="@color/zentea_darkgreyblue"
         android:visibility="invisible"
-        app:backgroundTint="@color/zentea_green1"
+        app:backgroundTint="@color/zentea_darkgreen"
         app:elevation="6dp"
         app:fabSize="mini"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/calendar_floatingActionButtonNewEvent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.897"
-        app:rippleColor="@color/zentea_white"
-        app:srcCompat="@android:drawable/ic_menu_today" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/calendar_floatingActionButtonScan"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_gravity="bottom|end"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="22dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="204dp"
-        android:tint="@color/zentea_darkgreyblue"
-        android:visibility="invisible"
-        app:backgroundTint="@color/zentea_green1"
-        app:elevation="6dp"
-        app:fabSize="mini"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.673"
-        app:rippleColor="@color/zentea_white"
+        app:layout_constraintVertical_bias="0.981"
         app:srcCompat="@android:drawable/ic_menu_camera" />
 
     <RelativeLayout
