--- a/app/src/main/res/layout/fragment_settings_settings.xml
+++ b/app/src/main/res/layout/fragment_settings_settings.xml
@@ -10,18 +10,18 @@
         android:id="@+id/settings_settings_textView_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_above="@+id/settings_settings_Switch_allowPush"
         android:layout_alignStart="@+id/settings_settings_textView_settings"
-        android:layout_marginTop="99dp"
+        android:layout_marginBottom="44dp"
         android:text="@string/username_text" />
 
     <TextView
         android:id="@+id/settings_settings_textView_allowPush"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/settings_settings_textView_settings"
-        android:layout_marginTop="169dp"
+        android:layout_above="@+id/settings_settings_textView_minutesBefore"
+        android:layout_alignStart="@+id/settings_settings_textView_username"
+        android:layout_marginBottom="41dp"
         android:text="@string/allowpush_text" />
 
     <TextView
@@ -31,8 +31,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="55dp"
         android:text="@string/settings_text"
+        android:textColor="@color/zentea_darkgreen"
         android:textSize="30sp" />
 
     <TextView
@@ -79,9 +80,8 @@
         android:id="@+id/settings_settings_textView_reminder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/settings_settings_textView_settings"
-        android:layout_marginTop="234dp"
+        android:layout_alignStart="@+id/settings_settings_textView_allowPush"
+        android:layout_centerVertical="true"
         android:text="@string/reminder_text" />
 
 </RelativeLayout>
